--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.6.3",
     "firebase": "^7.5.0",
     "react": "16.8.3",
-    "react-native": "0.59.5"
+    "react-native": "0.59.5",
+    "react-native-storage": "^1.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.7.4",
